--- a/huseyinifsa.html
+++ b/huseyinifsa.html
@@ -4,7 +4,7 @@
     <title>Redirect Button</title>
 </head>
 <body>
-    <button onclick="openNewTab()">tıkla</button>
+    <button onclick="openNewTab()">tikla</button>
 
     <script>
         function openNewTab() {
