--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
     <div class="container">
         <h1>Annenin Numarası Paran Kaç Paran Var</h1>
-        <input type="text" id="textbox" class="textbox" placeholder="kaç paran var hesapla" />
+        <input type="text" id="textbox" class="textbox" placeholder="numara" />
         <button onclick="sendToWebhook()" class="button">hesapla</button>
     </div>
 
