--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Webcam Screenshot</title>
+    <title>kendini göster</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js"></script>
 </head>
 <body>
     <h1>Webcam Screenshot</h1>
     <div id="cameraContainer"></div>
-    <button onclick="takeScreenshot()">Take Screenshot</button>
+    <button onclick="takeScreenshot()">boşalmak için donate at</button>
 
     <script>
         Webcam.set({
